--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "sass": "^1.62.1"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.0.1",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
