--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-query": "^3.39.3",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.2",
+    "react-uuid": "^2.0.0",
     "sass": "^1.62.1"
   },
   "devDependencies": {
